<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/resources_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical|fill_vertical"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="middle"
        tools:context=".ResourcesFragment">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="56dp"
            app:cardCornerRadius="10dp"
            app:contentPaddingLeft="7dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resources_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="158dp"
            app:cardCornerRadius="10dp"
            app:contentPaddingLeft="7dp"
            app:contentPaddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resources_consent_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/resources_consent_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resources_consent_body" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="175dp"
            app:cardCornerRadius="10dp"
            app:contentPaddingLeft="7dp"
            app:contentPaddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resources_help_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/resources_help_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resources_help_body" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="79dp"
            app:cardCornerRadius="10dp"
            app:contentPaddingLeft="7dp"
            app:contentPaddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eula_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resources_eula_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/resources_eula_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/resources_eula_body" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>