<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/divider"
    android:showDividers="middle"
    android:gravity="center|center_vertical|fill_vertical"
    tools:context=".SettingsFragment">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="56dp"
            app:cardCornerRadius="10dp"
            app:contentPaddingLeft="7dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="105dp"
            app:cardCornerRadius="10dp"
            app:contentPaddingLeft="7dp"
            app:contentPaddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/test_settings_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_settings_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_test" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="109dp"
            app:cardCornerRadius="10dp"
            app:contentPaddingLeft="7dp"
            app:contentPaddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recording_settings_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recording_settings_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/record_audio_setting" />

                    <CheckBox
                        android:layout_width="fill_parent"
                        android:id="@+id/record_audio_checkbox"
                        android:layout_height="32dp"
                        android:layout_weight="8" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/record_video_setting" />

                    <CheckBox
                        android:layout_width="fill_parent"
                        android:id="@+id/record_video_checkbox"
                        android:layout_height="32dp"
                        android:layout_weight="8" />

                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="76dp"
            app:cardCornerRadius="10dp"
            app:contentPaddingLeft="7dp"
            app:contentPaddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/trigger_settings_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trigger_settings_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <LinearLayout
                    android:layout_width="356dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="184dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/trigger_setting" />

                    <Spinner
                        android:id="@+id/trigger_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />


                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="169dp"
            app:cardCornerRadius="10dp"
            app:contentPaddingLeft="7dp"
            app:contentPaddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/message_settings_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_settings_header"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <LinearLayout
                    android:layout_width="356dp"
                    android:layout_height="34dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="184dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/format_setting" />

                    <Spinner
                        android:id="@+id/message_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />


                </LinearLayout>

                <TextView
                    android:id="@+id/currentMessageTextView"
                    android:layout_width="353dp"
                    android:layout_height="40dp"
                    android:layout_weight="2"
                    android:text="TextView" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>




</LinearLayout>
    </ScrollView>